# tachyon

./: .gitignore  .gitmodules  Doxyfile  OBS.pkgproj  README  SyphonInject.pkg  build_app.py  macbuild.sh  package_util.py  update.json
build_scripts/: README.txt  build_tachyon_linux  build_tachyon_windows_vs.bat  create_tachyon_installer.bat  deb_post_install  deb_post_remove  how_to_build_on_windows.txt  make_deb.bash  make_rpm.bash  rpm_post_install  rpm_post_remove  tachyon_windows_installer.nsi
cmake/Modules/: CopyMSVCBins.cmake  FindFTLSDK.cmake
cmake/osxbundle/: Info.plist  obslaunch.sh  tachyon.icns
libobs/: obs-config.h  obs-defs.h
libobs/data/: default_rect.effect
libobs/util/: base.c
obs/: CMakeLists.txt  obs-app.cpp  window-basic-main-outputs.cpp  window-basic-main.cpp  window-basic-settings.cpp  window-basic-settings.hpp
obs/data/locale/: en-US.ini  ms-MY.ini  vi-VN.ini
obs/forms/: OBSBasic.ui  OBSBasicSettings.ui  OBSBasicTransform.ui  obs.qrc
plugins/: CMakeLists.txt
plugins/mac-syphon/data/locale/: cs-CZ.ini
plugins/mac-vth264/data/locale/: cs-CZ.ini  gl-ES.ini
plugins/obs-ffmpeg/: CMakeLists.txt  obs-ffmpeg-output.c
plugins/obs-ffmpeg/data/locale/: ca-ES.ini  pt-PT.ini  ro-RO.ini  ru-RU.ini  sv-SE.ini  zh-TW.ini
plugins/obs-libfdk/data/locale/: cs-CZ.ini
plugins/obs-outputs/data/locale/: cs-CZ.ini
plugins/obs-qtwebkit/: CMakeLists.txt
plugins/obs-transitions/data/locale/: cs-CZ.ini  (+15 more)
plugins/rtmp-services/data/: services.json
plugins/text-freetype2/: CMakeLists.txt
plugins/win-capture/graphics-hook/: d3d9-capture.cpp
(+1 files in other folders)
